:sparkles: implemented an image uploading functionalities with active_storage.
image size settings are also implemented.

Closes #2

--- a/app/views/short_goals/_form.html.erb
+++ b/app/views/short_goals/_form.html.erb
@@ -21,15 +21,13 @@
     <%= form.text_area :detail %>
   </div>
 
-  <!--  <div class="field"> -->
-    <%#= form.label :images %>
-    <%#= form.file_field :images, direct_upload: true, multiple: true %>
-  <!--  </div> -->
-
-  <!--  <div class="field"> -->
-    <%#= form.label :experience %>
-    <%#= form.text_field :experience %>
-  <!--  </div> -->
+  <div class="field">
+    <%= form.label :image %>
+    <%= form.file_field :images, direct_upload: true, multiple: true %>
+    <% if @short_goal.images.attached? %>
+      <%= image_tag @short_goal.images %>
+    <% end %>
+  </div>
 
   <div class="actions">
     <%= form.submit %>
