--- a/app/views/short_goals/show.html.erb
+++ b/app/views/short_goals/show.html.erb
@@ -15,15 +15,15 @@
   <%= @short_goal.experience %>
 </p>
 
-<!-- <p> -->
-<!--  <strong>Images:</strong> -->
+<p>
+ <strong>Images:</strong>
 
-  <%# if @short_goal.images.attached? %>
-    <%# @short_goal.images.each do |image| %>
-      <%#= image_tag image.variant(resize_to_limit: [300, 300]) %>
-    <%# end %>
-  <%# end %>
-<!-- </p> -->
+  <% if @short_goal.images.attached? %>
+    <% @short_goal.images.each do |image| %>
+      <%= image_tag image.variant(resize: '300x300') %>
+    <% end %>
+  <% end %>
+</p>
 
 <%= link_to 'Edit', edit_short_goal_path(@short_goal) %> |
 <%= link_to 'Back', short_goals_path %>
